# wordcloud-webui

./: README.md  consts.py  gradio_interfaces.py  main.py  pyproject.toml
src/wordcloud_webui/: consts.py  gradio_interfaces.py  main.py
src/wordcloud_webui/util/: lib_jieba.py  lib_wordcloud.py
util/: lib_jieba.py  lib_wordcloud.py
